package pl.edu.pk.siwz.backend.controllers.FlightController;

public class PassengerDto {
    private String firstName;
    private String surname;
    // @TODO: change to better date type
    private String dateOfBirth;
    private String phoneNumber;
    private String email;
    private String idOrPesel;
}
